@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.3 2004/11/01 19:57:10 jdolecek Exp $
+# $NetBSD: Makefile,v 1.4 2004/11/27 10:02:52 jdolecek Exp $
 
-DISTNAME=	Date-1.3
+DISTNAME=	Date-1.4.3
 CATEGORIES=	time
 
-MAINTAINER=	tech-pkg@NetBSD.org
+MAINTAINER=	jdolecek@NetBSD.org
 COMMENT=	PHP Date and Time Zone Classes
 
 .include "../../lang/php/pear.mk"
